# libbitcoin-system

./: CMakeLists.txt  README.md  bitcoin-system-cmake.pc.in
builds/cmake/: CMakeLists.txt
doc/: coding-style.md  formal-model-erklaerung.md  formal-model-explanation.md  known-test-vector-deviations.md  pr-transaction-mainnet-tests.md  transaction-mainnet-tests.md  unit-test-concept-interpreter.md  unit-test-implementation.md
test/chain/: transaction_mainnet.cpp  transaction_vectors.cpp  transaction_vectors.hpp
test/machine/: interpreter.cpp  interpreter.hpp  interpreter_fixture.hpp  interpreter_op_arithmetic.cpp  interpreter_op_bitwise.cpp  interpreter_op_crypto.cpp  interpreter_op_flow.cpp  interpreter_op_push.cpp  interpreter_op_stack.cpp
